--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ script: bundle exec rake test
 env:
   - PUPPET_GEM_VERSION="~> 3.0" STRICT_VARIABLES=yes
   - PUPPET_GEM_VERSION="~> 3.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+  - PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES=yes
