--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,4 @@ fixtures:
   repositories:
     stdlib: 'git://github.com/puppetlabs/puppetlabs-stdlib'
   symlinks:
-    local_user: "#{source_dir}"
+    catfacts: "#{source_dir}"
